исправил баг со статистикой